--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 </style>
 <html>
    <head>
-      <title>Separate What You Describe: Language-Queried Audio Source Separation</title>
+      <title>Text-driven Foley Sound Generation With Latent Diffusion Model</title>
       <meta property="og:image" content="Path to my teaser.png"/>
       <!-- Facebook automatically scrapes this. Go to https://developers.facebook.com/tools/debug/ if you update and want to force Facebook to rescrape. -->
       <meta property="og:title" content="Creative and Descriptive Paper Title." />
@@ -153,7 +153,7 @@
    <body>
       <br><br>
       <center>
-         <span style="font-size:33px"><b>Separate What You Describe: Language-Queried Audio Source Separation</b></span>
+         <span style="font-size:33px"><b>Text-driven Foley Sound Generation With Latent Diffusion Model</b></span>
          <br>
          <br>
          <table align=center width=800px>
@@ -161,7 +161,7 @@
                <tr>
                   <td align=center width=120px>
                      <center>
-                        <span style="font-size:22px"><a href="https://liuxubo717.github.io/">Xubo Liu<sup>1</sup></a></span>
+                        <span style="font-size:22px"><a href="https://www.surrey.ac.uk/people/yi-yuan">Yi Yuan<sup>1</sup></a></span>
                      </center>
                   </td>
                   <td align=center width=120px>
@@ -171,12 +171,7 @@
                   </td>
                   <td align=center width=120px>
                      <center>
-                        <span style="font-size:22px"><a href="https://scholar.google.com/citations?user=B6O3SycAAAAJ&hl=zh-CN">Qiuqiang Kong<sup>2</sup></a></span>
-                     </center>
-                  </td>
-                  <td align=center width=120px>
-                     <center>
-                        <span style="font-size:22px"><a href="https://www.surrey.ac.uk/people/xinhao-mei">Xinhao Mei<sup>1</sup></a></span>
+                        <span style="font-size:22px"><a href="https://liuxubo717.github.io/">Xubo Liu<sup>1</sup></a></span>
                      </center>
                   </td>
                   <!--					<td align=center width=120px>-->
@@ -190,12 +185,7 @@
                <tr>
                   <td align=center width=120px>
                      <center>
-                        <span style="font-size:22px"><a href='https://www.surrey.ac.uk/people/jinzheng-zhao'>Jinzheng Zhao<sup>1</sup></a></span>
-                     </center>
-                  </td>
-                  <td align=center width=120px>
-                     <center>
-                        <span style="font-size:22px"><a href='https://www.surrey.ac.uk/people/qiushi-huang'>Qiushi Huang<sup>1</sup></a></span>
+                        <span style="font-size:22px"><a href="">Xiyuan Kang<sup>1</sup></a></span>
                      </center>
                   </td>
                   <td align=center width=120px>
@@ -220,11 +210,6 @@
                   <sup>1</sup><i>University of Surrey, UK</i>
                </center>
             </td>
-            <td align=center width=220px>
-               </center>
-               <sup>2</sup><i>ByteDance, China</i>
-               </center>
-            </td>
          </tr>
       </table>
       <br>
@@ -236,43 +221,28 @@
          <tr>
             <td>
                <p>
-                  In this paper, we introduce the task of language-queried audio source separation (LASS), which aims to separate a target source from an audio mixture based on a natural language query of the target source (e.g., ''<i>a man tells a joke followed by people laughing</i>'').
-                  A unique challenge in LASS is associated with the complexity of natural language description and its relation with the audio sources.
-                  To address this issue, we proposed LASS-Net, an end-to-end neural network that is learned to jointly process acoustic and linguistic information, and separate the target source that is consistent with the language query from an audio mixture.
-                  We evaluate the performance of our proposed system with a dataset created from the <a href="https://audiocaps.github.io/">AudioCaps</a> dataset. Experimental results show that LASS-Net achieves considerable improvements over baseline methods.
-                  Furthermore, we observe that LASS-Net achieves promising generalization results when using diverse human-annotated descriptions as queries, indicating its potential use in real-world scenarios.
+                  Sound generation aims to synthesise the background sound for multimedia content, which involves computationally modelling sound effects with specialized techniques. Previous models usually employ a large number of development sets with sound-text pairs. 
+                  In this work, we proposed a diffusion-based generation system for Foley sound generation. To alleviate the data scarcity issue, our model is initially pre-trained with large-scale datasets and fine-tune into this task via transfer learning. 
+                  We have observed that the feature embedding extracted by the input encoder can significantly affect the performance of the generation model. Hence, a trainable section for transferring the input embedding is introduced into the system to seek the optimal value for each class. 
+                  What’s more, we utilize a filtering strategy to further refine the output, i.e. by selecting the best results from the candidate clips generated in terms of the sim- ilarity score between the sound and target labels. Using the proposed method, our submitted system ranks 1st in DCASE Challenge 2023 task 7 (DCASE2023-T7). 
+                  Results in the ablation studies illustrate that the proposed techniques significantly improve the system final performance. Our system is fully open <a href="https://github.com/yyua8222/Dcase2023\_task7">sourced</a>
                </p>
             </td>
          </tr>
       </table>
-      <br>
-      <hr>
 
       <table align=center width=1000px>
          <center>
-            <h1>Oral Presentation at INTERSPEECH</h1>
+            <h1>Foley sound generation system</h1>
          </center>
          <tr>
             <td>
-                <div style="text-align: center;">
-                    <iframe width="853" height="480" src="https://www.youtube.com/embed/vsEWPVEZ6gA" frameborder="0"
-                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </td>
-        </tr>
-      </table>
-      <br>
-      <hr>
-
-      <table align=center width=1000px>
-         <center>
-            <h1>Language-Queried Audio Source Separation</h1>
-         </center>
-         <tr>
-            <td>
-               <p>In this work, we present LASS-Net, which is learned to jointly process acoustic and linguistic information, and separate the target source described by the natural language expressions.
-                  In LASS-Net, a Transformer-based query network (QueryNet) is used to encode the language expression into a query embedding, and a ResUNet-based separation network (SeparationNet) is then used to separate the target source from mixture conditioned on the query embedding.
-                  The architecture of our proposed model is illustrated as follows.
+               <p>Our proposed system is based on the widely used structure on sound generation, which consists of an encoder, a generator, a decoder and a vocoder. 
+                   Instead of directly using labels as the input, we employ a wrapping strategy to generate text descriptions for each label as the initial input for the system, such as text: “someone using keyboard”, for label: “3, keyboard”. 
+                  Then a trainable embedding is concatenated into this input embedding with LDM loss as a guide to seek the most suitable embedding of each sound.
+                  During the sampling stage, the system takes the text embedding from CLAP as the condition and utilizes the LDM model to generate the intermediate value of the sound feature in tokens. 
+                  Subsequently, the mel-spectrogram-result can be decoded from the tokens by the VAE decoder and reconstructed into waveform by the GAN vocoder.
+                  
                </p>
             </td>
          </tr>
@@ -1227,7 +1197,9 @@
                      <h1>Acknowledgements</h1>
                   </center>
                   <p>
-                     This research was supported by a Newton Institutional Links Award from the British Council (Grant number 623805725), a Research Scholarship from the China Scholarship Council (CSC), and a PhD Studentship from the University of Surrey.
+                     This research was partly supported by a research scholarship from the China Scholarship Council (CSC) No.202208060240, the British Broadcasting Corporation Research and Development (BBC R&D), 
+                     Engineering and Physical Sciences Research Council (EPSRC) Grant EP/T019751/1 “AI for Sound”, and a PhD scholarship from the Centre for Vision, Speech and Signal Processing (CVSSP), University of Surrey. 
+                     For the purpose of open access, the authors have applied a Creative Commons Attribution (CC BY) license to any Author Accepted Manuscript version arising.
                   </p>
                </left>
             </td>
