--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </td>
          </tr>
          <tr>
-            <td><img style="width:1000px" src="./resources/LASS.png"/></td>
+            <td><img style="width:1000px" src="./resources/overview.pdf"/></td>
          </tr>
       </table>
       <br>
@@ -1168,19 +1168,17 @@
       <hr>
       <table align=center width=1000px>
          <center>
-            <h1>Paper</h1>
+            <h1>Technical Report</h1>
          </center>
          <tr>
             <td><a href=""><img class="layered-paper-big" style="height:175px" src="./resources/paper.png"/></a></td>
             <td>
-               <span style="font-size:14pt">X. Liu, H. Liu, Q. Kong, X. Mei, J. Zhao, Q. Huang, M.D. Plumbley, W. Wang<br>
+               <span style="font-size:14pt">Yi Yuan, Haohe Liu, Xubo Liu, Xiyuan Kang, Mark D.Plumbley, Wenwu Wang<br>
                <br>
-               <b>Separate What You Describe: Language-Queried Audio Source Separation</b><br>
-               <br>
-               Accepted at INTERSPEECH 2022<br>
+               <b>Latent Diffusion Model Based Foley Sound Generation System For DCASE Challenge 2023 Task 7</b><br>
                <br>
                <br>
-               <a href="./resources/bibtex.txt">[Bibtex]</a>&nbsp&nbsp&nbsp<a href="https://arxiv.org/abs/2203.15147">[ArXiv]</a>&nbsp&nbsp&nbsp<a href="https://github.com/liuxubo717/LASS">[Code]</a>
+               <a href="./resources/bibtex.txt">[Bibtex]</a>&nbsp&nbsp&nbsp<a href="https://arxiv.org/abs/2305.15905">[ArXiv]</a>&nbsp&nbsp&nbsp<a href="https://github.com/yyua8222/Dcase2023\_task7">[Code]</a>
                <!-- (<a href="./resources/camera-ready.pdf">camera ready</a>)<br> -->
             </td>
          </tr>
