--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
 
          <tr>
             <td align=left width=1200px>
-               Input label : ''<i>0,DogBark </i>''<br><br>
+               Input label : ''<i>0 , DogBark </i>''<br><br>
                Wraped text: ''<i>A dog bark </i>''
             </td>
          </tr>
@@ -341,6 +341,139 @@
             </table>
          </tr>
       </table>
+
+
+         <tr>
+            <td align=left width=1200px>
+               Input label : ''<i>1 , Footstep </i>''<br><br>
+               Wraped text: ''<i>Foot steps</i>''
+            </td>
+         </tr>
+         <tr>
+            <table align=center width=1200px>
+               <tr>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/foot/1.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/foot/2.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/foot/3.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/foot/4.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+               </tr>
+               <tr>
+                  <td>
+                     <center>
+                        sample 1
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 2
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 3
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 4
+                     </center>
+                  </td>
+               </tr>
+               </tr>
+            </table>
+         </tr>
+      </table>
+
+         <tr>
+            <td align=left width=1200px>
+               Input label : ''<i>2 , GunShot </i>''<br><br>
+               Wraped text: ''<i>Gun shot</i>''
+            </td>
+         </tr>
+         <tr>
+            <table align=center width=1200px>
+               <tr>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/gun/1.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/gun/2.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/gun/3.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/gun/4.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+               </tr>
+               <tr>
+                  <td>
+                     <center>
+                        sample 1
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 2
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 3
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 4
+                     </center>
+                  </td>
+               </tr>
+               </tr>
+            </table>
+         </tr>
+      </table>
+
+
       <br>
 
       <table align=center width=1200px>
