--- a/index.html
+++ b/index.html
@@ -480,12 +480,14 @@
          </tr>
       </table>
 
+<br>
 
       <table align=center width=1200px>
+
          <tr>
             <td align=left width=1200px>
-               Language Query (AudioCaps): ''<i>People laugh followed by people singing while music plays</i>''<br><br>
-               Language Query (human): ''<i>A music show is presenting to the public</i>''
+               Input label : ''<i>3 , Keyboard </i>''<br><br>
+               Wraped text: ''<i>Someone using keyboard</i>''
             </td>
          </tr>
          <tr>
@@ -494,28 +496,28 @@
                   <td>
                      <center>
                         <audio controls="">
-                           <source src="./demo/exp3/mix.wav" type="audio/wav"/>
+                           <source src="./demo/keyboard/1.wav" type="audio/wav"/>
                         </audio>
                      </center>
                   </td>
                   <td>
                      <center>
                         <audio controls="">
-                           <source src="./demo/exp3/lass.wav" type="audio/wav"/>
+                           <source src="./demo/keyboard/2.wav" type="audio/wav"/>
                         </audio>
                      </center>
                   </td>
                   <td>
                      <center>
                         <audio controls="">
-                           <source src="./demo/exp3/human.wav" type="audio/wav"/>
+                           <source src="./demo/keyboard/3.wav" type="audio/wav"/>
                         </audio>
                      </center>
                   </td>
                   <td>
                      <center>
                         <audio controls="">
-                           <source src="./demo/exp3/tgt.wav" type="audio/wav"/>
+                           <source src="./demo/keyboard/4.wav" type="audio/wav"/>
                         </audio>
                      </center>
                   </td>
@@ -523,44 +525,22 @@
                <tr>
                   <td>
                      <center>
-                        <img alt="fname" height="125" src="./demo/exp3/mix.png" width="280"/>
+                        sample 1
                      </center>
                   </td>
                   <td>
                      <center>
-                        <img alt="fname" height="125" src="./demo/exp3/lass.png" width="280"/>
+                        sample 2
                      </center>
                   </td>
                   <td>
                      <center>
-                        <img alt="fname" height="125" src="./demo/exp3/human.png" width="280"/>
+                        sample 3
                      </center>
                   </td>
                   <td>
                      <center>
-                        <img alt="fname" height="125" src="./demo/exp3/tgt.png" width="280"/>
-                     </center>
-                  </td>
-               </tr>
-               <tr>
-                  <td>
-                     <center>
-                        (a) audio mixture
-                     </center>
-                  </td>
-                  <td>
-                     <center>
-                        (b) LASS (AudioCaps)
-                     </center>
-                  </td>
-                  <td>
-                     <center>
-                        (c) LASS (human)
-                     </center>
-                  </td>
-                  <td>
-                     <center>
-                        (d) target source
+                        sample 4
                      </center>
                   </td>
                </tr>
@@ -568,13 +548,14 @@
             </table>
          </tr>
       </table>
-      <br>
+<br>
 
       <table align=center width=1200px>
+
          <tr>
             <td align=left width=1200px>
-               Language Query (AudioCaps): ''<i>Someone is typing on a keyboard</i>''<br><br>
-               Language Query (human): ''<i>The sound of hitting the keyboard</i>''
+               Input label : ''<i>4 , Moving_motor_vehicle </i>''<br><br>
+               Wraped text: ''<i>A moving motor</i>''
             </td>
          </tr>
          <tr>
@@ -583,28 +564,28 @@
                   <td>
                      <center>
                         <audio controls="">
-                           <source src="./demo/exp4/mix.wav" type="audio/wav"/>
+                           <source src="./demo/motor/1.wav" type="audio/wav"/>
                         </audio>
                      </center>
                   </td>
                   <td>
                      <center>
                         <audio controls="">
-                           <source src="./demo/exp4/lass.wav" type="audio/wav"/>
+                           <source src="./demo/motor/2.wav" type="audio/wav"/>
                         </audio>
                      </center>
                   </td>
                   <td>
                      <center>
                         <audio controls="">
-                           <source src="./demo/exp4/human.wav" type="audio/wav"/>
+                           <source src="./demo/motor/3.wav" type="audio/wav"/>
                         </audio>
                      </center>
                   </td>
                   <td>
                      <center>
                         <audio controls="">
-                           <source src="./demo/exp4/tgt.wav" type="audio/wav"/>
+                           <source src="./demo/motor/4.wav" type="audio/wav"/>
                         </audio>
                      </center>
                   </td>
@@ -612,44 +593,22 @@
                <tr>
                   <td>
                      <center>
-                        <img alt="fname" height="125" src="./demo/exp4/mix.png" width="280"/>
+                        sample 1
                      </center>
                   </td>
                   <td>
                      <center>
-                        <img alt="fname" height="125" src="./demo/exp4/lass.png" width="280"/>
+                        sample 2
                      </center>
                   </td>
                   <td>
                      <center>
-                        <img alt="fname" height="125" src="./demo/exp4/human.png" width="280"/>
+                        sample 3
                      </center>
                   </td>
                   <td>
                      <center>
-                        <img alt="fname" height="125" src="./demo/exp4/tgt.png" width="280"/>
-                     </center>
-                  </td>
-               </tr>
-               <tr>
-                  <td>
-                     <center>
-                        (a) audio mixture
-                     </center>
-                  </td>
-                  <td>
-                     <center>
-                        (b) LASS (AudioCaps)
-                     </center>
-                  </td>
-                  <td>
-                     <center>
-                        (c) LASS (human)
-                     </center>
-                  </td>
-                  <td>
-                     <center>
-                        (d) target source
+                        sample 4
                      </center>
                   </td>
                </tr>
@@ -657,7 +616,146 @@
             </table>
          </tr>
       </table>
-      <br>
+<br>
+
+      <table align=center width=1200px>
+
+         <tr>
+            <td align=left width=1200px>
+               Input label : ''<i>5 , Rain </i>''<br><br>
+               Wraped text: ''<i>Rain</i>''
+            </td>
+         </tr>
+         <tr>
+            <table align=center width=1200px>
+               <tr>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/rain/1.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/rain/2.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/rain/3.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/rain/4.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+               </tr>
+               <tr>
+                  <td>
+                     <center>
+                        sample 1
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 2
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 3
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 4
+                     </center>
+                  </td>
+               </tr>
+               </tr>
+            </table>
+         </tr>
+      </table>
+<br>
+
+      <table align=center width=1200px>
+
+         <tr>
+            <td align=left width=1200px>
+               Input label : ''<i>6 , Sneeze_cough </i>''<br><br>
+               Wraped text: ''<i>A man cough</i>''
+            </td>
+         </tr>
+         <tr>
+            <table align=center width=1200px>
+               <tr>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/cough/1.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/cough/2.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/cough/3.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        <audio controls="">
+                           <source src="./demo/cough/4.wav" type="audio/wav"/>
+                        </audio>
+                     </center>
+                  </td>
+               </tr>
+               <tr>
+                  <td>
+                     <center>
+                        sample 1
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 2
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 3
+                     </center>
+                  </td>
+                  <td>
+                     <center>
+                        sample 4
+                     </center>
+                  </td>
+               </tr>
+               </tr>
+            </table>
+         </tr>
+      </table>
+
+
+
+      
 
 
       <br>
