--- a/index.html
+++ b/index.html
@@ -161,17 +161,17 @@
                <tr>
                   <td align=center width=120px>
                      <center>
-                        <span style="font-size:22px"><a href="https://www.surrey.ac.uk/people/yi-yuan">Yi Yuan<sup>1</sup></a></span>
+                        <span style="font-size:22px"><a href="https://www.surrey.ac.uk/people/yi-yuan">Yi Yuan</a></span>
                      </center>
                   </td>
                   <td align=center width=120px>
                      <center>
-                        <span style="font-size:22px"><a href="https://www.surrey.ac.uk/people/haohe-liu">Haohe Liu<sup>1</sup></a></span>
+                        <span style="font-size:22px"><a href="https://www.surrey.ac.uk/people/haohe-liu">Haohe Liu</a></span>
                      </center>
                   </td>
                   <td align=center width=120px>
                      <center>
-                        <span style="font-size:22px"><a href="https://liuxubo717.github.io/">Xubo Liu<sup>1</sup></a></span>
+                        <span style="font-size:22px"><a href="https://liuxubo717.github.io/">Xubo Liu</a></span>
                      </center>
                   </td>
                   <!--					<td align=center width=120px>-->
@@ -185,17 +185,17 @@
                <tr>
                   <td align=center width=120px>
                      <center>
-                        <span style="font-size:22px"><a href="">Xiyuan Kang<sup>1</sup></a></span>
+                        <span style="font-size:22px"><a href="">Xiyuan Kang</a></span>
                      </center>
                   </td>
                   <td align=center width=120px>
                      <center>
-                        <span style="font-size:22px"><a href='https://www.surrey.ac.uk/people/mark-plumbley'>Mark D. Plumbley<sup>1</sup></a></span><br>
+                        <span style="font-size:22px"><a href='https://www.surrey.ac.uk/people/mark-plumbley'>Mark D. Plumbley</a></span><br>
                      </center>
                   </td>
                   <td align=center width=120px>
                      <center>
-                        <span style="font-size:22px"><a href='http://personal.ee.surrey.ac.uk/Personal/W.Wang/'>Wenwu Wang<sup>1</sup></a></span><br>
+                        <span style="font-size:22px"><a href='http://personal.ee.surrey.ac.uk/Personal/W.Wang/'>Wenwu Wang</a></span><br>
                      </center>
                   </td>
                </tr>
@@ -207,7 +207,7 @@
          <tr>
             <td align=center width=120px>
                <center>
-                  <sup>1</sup><i>University of Surrey, UK</i>
+                  <i>University of Surrey, UK</i>
                </center>
             </td>
          </tr>
