--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
             </td>
          </tr>
          <tr>
-            <td><img style="width:1000px" src="./resources/overview.pdf"/></td>
+            <td><img style="width:1000px" src="./resources/overview.png"/></td>
          </tr>
       </table>
       <br>
